...
        switch self {
        case .addItem:
            return "Add Item Fast"
        case .zoneMission:
            return "Zone Mission"
        case .replenishment:
            return "Replenishment"
        }
    }

    var subtitle: String {
        switch self {
        case .addItem:
...
